Fix FilterColumn title alignment
For some reason this shifts header to the right on FilterColumn but not other CollapseCol - but it doesn't seem necessary anyway

--- a/src/main.css
+++ b/src/main.css
@@ -7,7 +7,7 @@
 }
 
 .collapse-title {
-    @apply pe-0 p-4;
+    @apply p-4;
 }
 
 .max-w-90 {
